--- a/css-challenge/index.html
+++ b/css-challenge/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <title></title>
-    <meta charset="utf-8" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./styles.css" />
-  </head>
-  <body>
-    <section class="columns">
-        <section class="column-one"><h1 class="text-one">ONE</h1></section>
-        <section class="column-two"><h1 class="text-two">TWO</h1></section>
-        <section class="column-three"><h1 class="text-three">THREE</h1></section>
+<head>
+  <title></title>
+  <meta charset="utf-8" />
+  <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./styles.css" />
+</head>
+<body>
+  <section class="columns">
+    <section class="column-one">
+      <h1 class="text-one">ONE</h1>
     </section>
-  </body>
+    <section class="column-two">
+      <h1 class="text-two">TWO</h1>
+    </section>
+    <section class="column-three">
+      <h1 class="text-three">THREE</h1>
+    </section>
+  </section>
+</body>
 </html>
